Address SonarCloud findings